fixed on mobile testimonial slider

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,20 @@
 @tailwind utilities;
 
 .embla {
+  width: 100%;
   --slide-spacing: 1rem;
   --slide-size: 100%;
-  --slide-height: 19rem;
-  padding: 1.6rem;
 }
+
 .embla__viewport {
   overflow: hidden;
 }
+
 .embla__container {
-  backface-visibility: hidden;
   display: flex;
   touch-action: pan-y;
 }
+
 .embla__slide {
   flex: 0 0 var(--slide-size);
   min-width: 0;
